--- a/public/admin.html
+++ b/public/admin.html
@@ -40,7 +40,7 @@
    <div class="head" id="head">
      <div id="heure"><p id="time">N/A</p></div>
      <div id="portal"><p>Portail Administration</p></div>
-       <button onclick="document.getElementById('map').style.display='flex';document.getElementById('admin').style.display='none';" id="visuBtn">Voir la carte</button>
+       <button onclick="document.getElementById('map').style.display='flex';document.getElementById('admin').style.display='none'; resizeMap();" id="visuBtn">Voir la carte</button>
        <button onclick="document.getElementById('map').style.display='none';document.getElementById('admin').style.display='flex';" id="adminBtn">Administration</button>
      <div id="logo_eurea">
        <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" onclick="window.location.href = 'https://www.groupe-eurea.com/';" alt="Logo Euréa">
@@ -151,7 +151,7 @@
         box-sizing: border-box;
       }
       #view {
-        width:80%;
+        flex:1;
         height:100%;
         background:lightgray;
       }
@@ -659,6 +659,12 @@ const benDatas = {};
         }
       }
       setInterval(checkWebSocket, 15*1000);
+
+      async function resizeMap () {
+        document.getElementById('panel').style.display = "flex";
+        document.getElementById('panel').style.display = "none";
+      }
+      resizeMap();
     </script>
   </body>
 </html>
