--- a/public/admin.html
+++ b/public/admin.html
@@ -516,10 +516,16 @@ benDatas[ben.id] = ben;
        });
         closeBtn.addEventListener('click', () => {
          lightbox.style.display = 'none';
+        document.getElementById('editeurLightBenne').style.display == 'none';
+        selecter.selectedIndex = 0;
+         document.getElementById('inpSelecter').value = "";
        });
        lightbox.addEventListener('click', (e) => {
          if (e.target === lightbox) {
            lightbox.style.display = 'none';
+             document.getElementById('editeurLightBenne').style.display == 'none';
+        selecter.selectedIndex = 0;
+         document.getElementById('inpSelecter').value = "";
          }
        });
     
