--- a/public/admin.html
+++ b/public/admin.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   </head>
   <body>
+    <div id="toast-container"></div>
     <div id="lightbox">
       <div class="lightbox-content w3-center">
         <span id="close-btn">&times;</span>
