--- a/public/admin.html
+++ b/public/admin.html
@@ -715,11 +715,11 @@ const benDatas = {};
         opacity:0;
         animation-fill-mode:forwards;
       }
-      @keyframe fadein {
+      @keyframes fadein {
         from {opacity:0; transform:translateX(50%);}
         to {opacity:1; transform:translateX(0);}
       }
-      @keyframe fadeout {
+      @keyframes fadeout {
         from {opacity:1; transform:translateX(0);}
         to {opacity:0; transform:translateX(50%);}
       }
