--- a/public/admin.html
+++ b/public/admin.html
@@ -645,11 +645,11 @@ const benDatas = {};
         "status"
         ];
 
-      const statusOpt = {
+      const statusOpt = [
         "Posée":{value:"A"},
         "Prête":{value:"B"},
         "En dépôt":{value:"C"}
-      };
+      ];
         const option = document.createElement('option');
           option.value = "no";
           option.text = "Sélectionnez un paramètre";
