--- a/public/admin.html
+++ b/public/admin.html
@@ -754,6 +754,12 @@ const benDatas = {};
         from {opacity:1; transform:translateX(0);}
         to {opacity:0; transform:translateX(50%);}
       }
+
+      #suggester {
+        display:flex;
+        flex-direction:column;
+        justify-content: space-between;
+      }
     </style>
     <script>
       function showToast(message, color = '#4CAF50') {
