--- a/public/admin.html
+++ b/public/admin.html
@@ -513,7 +513,7 @@ benDatas[ben.id] = ben;
       console.log("LIGHTBOX");
       line.addEventListener('click', () => {
          lightbox.style.display = 'flex';
-        document.getElementById('imagePop').src = ;
+        document.getElementById('imagePop').src = "";
          document.getElementById('lightH2B').textContent = "Benne n°" + ben.id;
          document.getElementById('lightPB').textContent =  ben.volume + " T";
          popAdresse(ben.latitude, ben.longitude);
