--- a/public/admin.html
+++ b/public/admin.html
@@ -25,7 +25,7 @@
       <div class="lightbox-content w3-center">
         <span id="close-btnB">&times;</span>
         <div class="circleB" style="top:50%; left:50%; transform:translate(-50%,-50%)">
-          <img id="lightImgB" src="" alt="Profil">
+          <img id="imagePop" src="" alt="Profil">
         </div>
         <h2 id="lightH2B"></h2>
         <p id="lightPB"></p>
