--- a/public/admin.html
+++ b/public/admin.html
@@ -630,7 +630,7 @@ benDatas[ben.id] = ben;
 
       async function deleteBenne(num) {
         console.log(numon)
-        if (confirm("Supprimer la benne n°", numon, " ?")) {
+        if (confirm(`Supprimer la benne n°${numon} ?`)) {
           if(confirm("Confirmez pour la dernière fois... Cette action est irréversible")) {
         const content = {
           num:num
