--- a/public/admin.html
+++ b/public/admin.html
@@ -517,7 +517,7 @@ benDatas[ben.id] = ben;
         console.log("Lien image :", ben.link);
         document.getElementById('imagePop').src = ben.link;
          document.getElementById('lightH2B').textContent = "Benne n°" + ben.id;
-         document.getElementById('lightPB').textContent =  ben.volume + " T | ", ben.notes;
+         document.getElementById('lightPB').textContent =  ben.volume + " T | " + ben.notes;
          popAdresse(ben.latitude, ben.longitude);
         numon = ben.id;
         console.log(numon);
