--- a/public/admin.html
+++ b/public/admin.html
@@ -27,6 +27,7 @@
         <div class="circleB" style="top:50%; left:50%; transform:translate(-50%,-50%)">
           <img id="imagePop" src="" alt="Profil">
         </div>
+        <p id="lightPB3"></p>
         <h2 id="lightH2B"></h2>
         <p id="lightPB"></p>
         <i id="lightPB2"></i>
@@ -518,6 +519,7 @@ benDatas[ben.id] = ben;
         document.getElementById('imagePop').src = ben.link;
          document.getElementById('lightH2B').textContent = "Benne n°" + ben.id;
          document.getElementById('lightPB').textContent =  ben.volume + " T | " + ben.notes;
+        document.getElementById('lightPB3').textContent =  toread(ben.statut).capitalize + " chez " + "GAEC Chèvre" + " en " + "Blé";
          popAdresse(ben.latitude, ben.longitude);
         numon = ben.id;
         console.log(numon);
