--- a/public/admin.html
+++ b/public/admin.html
@@ -521,7 +521,7 @@ benDatas[ben.id] = ben;
          document.getElementById('lightPB').textContent =  ben.volume + " T | " + ben.notes;
         const statusReadable = toread(ben.status);
         console.log(statusReadable);
-        document.getElementById('lightPB3').innerHTML =  "<strong>" + statusReadable.charAt(0).toUpperCase() + statusReadable.slice(1) + "</strong> chez <strong>" + "GAEC Chèvre" + </strong>" en <strong>" + "Blé" + "</strong>";
+        document.getElementById('lightPB3').innerHTML =  "<strong>" + statusReadable.charAt(0).toUpperCase() + statusReadable.slice(1) + "</strong> chez <strong>" + "GAEC Chèvre" + "</strong> en <strong>" + "Blé" + "</strong>";
          popAdresse(ben.latitude, ben.longitude);
         numon = ben.id;
         console.log(numon);
